--- a/module/Frontend/view/v1/frontend/content/complete.phtml
+++ b/module/Frontend/view/v1/frontend/content/complete.phtml
@@ -16,21 +16,20 @@
         <section class="wrapper site-min-height">
             <div class="container">
                 <div class="row">
-                    <?php echo $this->render('frontend/nav-user-left'); ?>
-                    <div class="col-md-5">
+                    <div class="col-md-8">
                         <div class="ads-detail">
                             <div class="account-overview">
                                 <div class="row">
                                     <div class="col-md-12 border-detail">
                                         <div id="form">
                                             <div class="alert alert-success alert-block fade in">
-                                                <?php if ($this->completeSession->type == 'add'): ?>
+                                                <?php if ($this->completeSession['type'] == 'add'): ?>
                                                     <h4><i class="fa fa-thumbs-o-up"></i> Chúc mừng bạn đã đăng tin rao vặt thành công!</h4>
                                                 <?php else: ?>
                                                     <h4><i class="fa fa-thumbs-o-up"></i> Chúc mừng bạn chỉnh sửa tin rao vặt thành công!</h4>
                                                 <?php endif; ?>
-                                                <h4><i class="fa fa fa-bullhorn"></i> Tiêu đề : <?php echo $this->completeSession->title; ?></h4>
-                                                <p>- Bạn có thể click vào đây để <a href="<?php echo $this->serverUrl() . $this->Url('view-content', array('controller' => 'content', 'action' => 'detail', 'contentSlug' => $this->completeSession->title_slug, 'contentId' => $this->completeSession->id)) ?>">xem chi tiết</a></p>
+                                                <h4><i class="fa fa fa-bullhorn"></i> Tiêu đề : <?php echo $this->completeSession['title']; ?></h4>
+                                                <p>- Bạn có thể click vào đây để <a href="<?php echo $this->serverUrl() . $this->Url('view-content', array('contentSlug' => $this->completeSession['title_slug'], 'contentId' => $this->completeSession['id'])) ?>">xem chi tiết</a></p>
                                                 <p>- Hoặc Bạn có thể click vào đây để <a href="">chỉnh sửa</a></p>
                                             </div>
 
