--- a/module/Frontend/view/v1/frontend/content/add-comment.phtml
+++ b/module/Frontend/view/v1/frontend/content/add-comment.phtml
@@ -1,5 +1,5 @@
 <?php
-    $avatar = empty($this->arrData['user_avatar']) ? STATIC_URL . '/f/v1/images/no_avatar_male.jpg' : $this->arrData['user_avatar'];
+    $avatar = empty($this->arrData['user_avatar']) ? STATIC_URL . '/f/v1/images/noavatar.jpg' : $this->arrData['user_avatar'];
 ?>
 <article class="row">
     <div class="col-md-2 col-sm-2 hidden-xs">
@@ -14,7 +14,7 @@
                 <div class="row">
                     <header class="text-left">
                         <div class="col-md-8"><i class="fa fa-user"></i> <span style="color: #007DFF"><?php echo $this->arrData['full_name'] ?></span></div>
-                        <div class="col-md-4 text-right"><i class="fa fa-clock-o"></i> <span style="color: #007DFF"><?php echo My\General::formatDateString($comment['created_date']); ?></span></div>
+                        <div class="col-md-4 text-right"><i class="fa fa-clock-o"></i> <span style="color: #007DFF"><?php echo My\General::formatDateString($this->arrData['created_date']); ?></span></div>
                     </header>
                 </div>
                 <div class="row">
