--- a/module/Frontend/view/v1/frontend/content/edit.phtml
+++ b/module/Frontend/view/v1/frontend/content/edit.phtml
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row col-md-12">
             <div class="page-heading">
-                <h1>SỬA TIN RAO VẶT </h1>
+                <h2>SỬA TIN RAO VẶT </h2>
             </div>
         </div>
     </div>
@@ -152,7 +152,9 @@
                                                     <b>Nhập tags cho tin rao vặt</b>
                                                     <input type="text" class="form-control" name="content_tags" />
                                                 </div>
-                                                <?php if (empty(CUSTOMER_ID)): ?>
+                                                <?php if (empty(CUSTOMER_ID)): 
+                                                    $user_info = json_decode($this->arrContent['user_info'],true);
+                                                    ?>
                                                     <div class="col-sm-12 padding-control">
                                                         <h4 class="inner-heading">THÔNG TIN LIÊN HỆ</h4>
                                                     </div>
@@ -170,21 +172,21 @@
                                                     <?php endif; ?>
                                                     <div class="col-sm-6 input-pad">
                                                         <span class="fa fa-cc-visa form-control-feedback"></span>
-                                                        <input class="form-control" type="text" name="name" placeholder="Nhập họ và tên" value='<?php echo empty($params['name']) ? $this->arrContent['user_info']['user_fullname'] : $params['name']; ?>'>
+                                                        <input class="form-control" type="text" name="name" placeholder="Nhập họ và tên" value='<?php echo empty($params['name']) ? $user_info['user_fullname'] : $params['name']; ?>'>
 
                                                     </div>
                                                     <div class="col-sm-6 padding-control">
                                                         <span class="fa fa-google form-control-feedback"></span>
-                                                        <input class="form-control" type="email" name="email" placeholder="Địa chỉ email" value='<?php echo empty($params['email']) ? $this->arrContent['user_info']['user_email'] : $params['email']; ?>'>
+                                                        <input class="form-control" type="email" name="email" placeholder="Địa chỉ email" value='<?php echo empty($params['email']) ? $user_info['user_email'] : $params['email']; ?>'>
                                                     </div>
                                                     <div class="col-sm-6 input-pad">
                                                         <span class="fa fa-phone form-control-feedback"></span>
-                                                        <input class="form-control" type="text" name="phone" placeholder="Số điện thoại" value='<?php echo empty($params['phone']) ? $this->arrContent['user_info']['user_phone'] : $params['phone']; ?>'>
+                                                        <input class="form-control" type="text" name="phone" placeholder="Số điện thoại" value='<?php echo empty($params['phone']) ? $user_info['user_phone'] : $params['phone']; ?>'>
 
                                                     </div>
                                                 <?php endif; ?>
                                                 <div class="col-md-12 text-center" style="margin-bottom: 10px">
-                                                    <button type="submit" class="btn btn-primary"><i class="fa fa-send"></i> ĐĂNG RAO VẶT</button>
+                                                    <button type="submit" class="btn btn-success"><i class="fa fa-save"></i> LƯU LẠI</button>
                                                 </div>
                                             </form>
                                         </div>
