--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -11,11 +11,12 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         <?php
         echo $this->headMeta();
         ?>
+        <meta name="google-site-verification" content="BkUSNwKfepTa9vPvpivbyyRBC4MsN3LHGl_qae7RBpI" />
         <meta name="dc.publisher" content="<?php echo My\General::SITE_AUTH; ?>" />
         <meta name="dc.rights.copyright" content="<?php echo My\General::SITE_AUTH; ?>" />
         <meta name="dc.creator.name" content="<?php echo My\General::SITE_AUTH; ?>" />
         <meta name="dc.creator.email" content="<?php echo My\General::EMAIL_SYS ?>" />
-        <meta name="dc.identifier" content="http://dev.raovat.vn" />
+        <meta name="dc.identifier" content="http://bestquynhon.com" />
         <meta name="copyright" content="<?php echo My\General::SITE_AUTH; ?>" />
         <meta name="author" content="<?php echo My\General::SITE_AUTH; ?>" />
         <meta name="dc.language" content="vi-VN" />
@@ -28,72 +29,80 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
         <meta name="ICBM" content="13.770044, 109.234571" />
         <meta http-equiv="Expires" content="0" />
         <meta name='revisit-after' content='1 days' />
-        <link rel="alternate" href="http://quynhon247.com" hreflang="vi-vn" />
-        <meta content="QuyNhon247.com" property="og:site_name" />
+        <link rel="alternate" href="http://bestquynhon.com" hreflang="vi-vn" />
+        <meta content="<?php echo \My\General::SITE_AUTH ?>" property="og:site_name" />
         <meta content="website" property="og:type" />
 
         <script type="text/javascript">
             var baseurl = '<?php echo $this->serverUrl(); ?>';
             var staticurl = '<?php echo STATIC_URL; ?>';
-            var fullname = '<?php echo CUSTOMER_FULLNAME; ?>';
             var captchaURL = '<?php echo $this->serverUrl() . $this->Url('captcha', array('controller' => 'captcha', 'action' => 'index')) ?>';
         </script>
-        
+
         <?php
         echo $this->headLink();
         echo $this->headScript();
         ?>
 
         <script type="application/ld+json">
-            //            {
-            //            "@context": "http://schema.org",
-            //            "@type": "Organization",
-            //            "url": "<?php // echo $this->serverUrl();         ?>",
-            //            }
+            {
+            "@context": "http://schema.org",
+            "@type": "Organization",
+            "url": "<?php echo $this->serverUrl(); ?>",
+            }
         </script>
+
+        <script>
+            (function (d, s, id) {
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id))
+                    return;
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.6&appId=1697339473867169";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+        </script>
+        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
     </head>
 
     <body>
+        <div id='chiase'>
+            <div style="margin:4px;">
+                <div class="fb-like" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
+                <br />
+                <br />
+                <div class='nut' id='google'>
+                    <g:plusone size="tall"></g:plusone>
+                </div>
+            </div>
+        </div>
+        <div id="fb-root"></div>
         <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
             <p id="loading_mask_loader" class="loader">
                 <img alt="Loading..." src="<?php echo STATIC_URL . '/f/v1/images/ajax-loader-tr.gif'; ?>">
                 <br>Please wait...</p>
         </div>
-        <!-- Google Tag Manager -->
-<!--        <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-NWX2H4"
-                          height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <script>(function (w, d, s, l, i) {
-                w[l] = w[l] || [];
-                w[l].push({'gtm.start':
-                            new Date().getTime(), event: 'gtm.js'});
-                var f = d.getElementsByTagName(s)[0],
-                        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-                j.async = true;
-                j.src =
-                        '//www.googletagmanager.com/gtm.js?id=' + i + dl;
-                f.parentNode.insertBefore(j, f);
-            })(window, document, 'script', 'dataLayer', 'GTM-NWX2H4');</script>-->
-        <!-- End Google Tag Manager -->
+
         <script>
-//            (function (i, s, o, g, r, a, m) {
-//                i['GoogleAnalyticsObject'] = r;
-//                i[r] = i[r] || function () {
-//                    (i[r].q = i[r].q || []).push(arguments)
-//                }, i[r].l = 1 * new Date();
-//                a = s.createElement(o),
-//                        m = s.getElementsByTagName(o)[0];
-//                a.async = 1;
-//                a.src = g;
-//                m.parentNode.insertBefore(a, m)
-//            })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-//
-//            ga('create', 'UA-65285980-1', 'auto');
-//            ga('send', 'pageview');
+            (function (i, s, o, g, r, a, m) {
+                i['GoogleAnalyticsObject'] = r;
+                i[r] = i[r] || function () {
+                    (i[r].q = i[r].q || []).push(arguments)
+                }, i[r].l = 1 * new Date();
+                a = s.createElement(o),
+                        m = s.getElementsByTagName(o)[0];
+                a.async = 1;
+                a.src = g;
+                m.parentNode.insertBefore(a, m)
+            })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
+            ga('create', 'UA-65285980-2', 'auto');
+            ga('send', 'pageview');
         </script>
+        
         <!--Start Header section-->
         <?php echo $this->render('frontend/header'); ?>
-        <!--Go to www.addthis.com/dashboard to customize your tools--> 
-       <!--<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5586e11d7d4827b1" async="async"></script>-->
 
         <!--End Header section-->
         <?php echo $this->layout()->content; ?>
