--- a/module/Frontend/view/v1/frontend/index/index.phtml
+++ b/module/Frontend/view/v1/frontend/index/index.phtml
@@ -39,7 +39,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                                 <img src="http://dev.st.raovat.vn/uploads/user/2016/05/01/thumbs/150x150/1462115823.285.jpg" style="width: 30px; height: 30px"></a>
                                                         </div>
                                                         <div class="col-md-11" style="margin-top: 5px;">
-                                                            <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $arrContent['cont_detail_text']; ?>" class="red-tooltip" style="text-decoration: none;">
+                                                            <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $arrContent['cont_detail_text']; ?>" class="red-tooltip color-red" style="text-decoration: none;">
                                                                 <b><?php echo $arrContent['cont_title']; ?></b> <img src="<?php echo STATIC_URL . '/f/v1/images/s-vip.gif'; ?>">
                                                             </a>
                                                         </div>
@@ -149,7 +149,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                             ?>
                                             <tr id="item-<?php echo $arrContent['cont_id'] ?>">
                                                 <td style="vertical-align: middle">
-                                                    <div class="col-md-1">
+                                                    <div class="col-md-1 col-sm-0">
                                                         <?php
                                                         if (!empty($arrContent['user_created'])):
                                                             $avatar = json_decode($this->arrUserList[$arrContent['user_created']]['user_avatar'], true)[0]['thumbImage']['30x30'];
@@ -163,7 +163,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                             </a>
                                                         <?php endif; ?>
                                                     </div>
-                                                    <div class="col-md-11" style="margin-top: 5px;">
+                                                    <div class="col-md-11 col-xs-12" style="margin-top: 5px;">
                                                         <a href="<?php echo $this->serverUrl() . $this->Url('view-content', ['contentSlug' => $arrContent['cont_slug'], 'contentId' => $arrContent['cont_id']]); ?>" data-toggle="tooltip" title="<?php echo $arrContent['cont_detail_text']; ?>" class="red-tooltip vip2" style="text-decoration: none;">
                                                             <?php echo $arrContent['cont_title']; ?><?php if ($arrContent['vip_type'] == \My\General::VIP_CATE_PAGE): ?><img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>"><?php endif; ?> <img src="<?php echo STATIC_URL . '/f/v1/images/vip2.gif' ?>">
                                                         </a>
@@ -173,7 +173,7 @@ $arrCategoryListChildrenFormat = $this->arrCategoryListChildrenFormat;
                                                     <a href="javascript:;" style="text-decoration: none;color: #69A467"><b><?php echo empty($arrContent['dist_id']) ? 'Toàn tỉnh' : $arrLocation[$arrContent['dist_id']]['dist_name']; ?></b></a>
                                                 </td>
                                                 <td class="text-center" style="vertical-align: middle">
-                                                    <a href="#" style="text-decoration: none; color: #A94464"><b><?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?></b></a>
+                                                    <a href="javascript:;" style="text-decoration: none; color: #A94464"><b><?php echo $this->arrPropertiesList[$arrContent['prop_id']]['prop_name']; ?></b></a>
                                                 </td>
 
                                                 <td class="text-center" style="vertical-align: middle;color: #1b95e0">
