--- a/module/Frontend/view/v1/layout/footer.phtml
+++ b/module/Frontend/view/v1/layout/footer.phtml
@@ -24,7 +24,7 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h4>VỀ CHOTOTQUYNHON.COM</h4>
-                        <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Chototquynhon.com</a><br/>
+                        <a href="#"><i class="fa fa-arrow-right"></i> Giới thiệu về Bestquynhon.com</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hotline : 0979 57 57 93</a> (Tâm đẹp trai)<br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Hợp tác & liên kết</a><br/>
                         <a href="#"><i class="fa fa-arrow-right"></i> Chính sách bảo mật</a><br/>
@@ -33,16 +33,16 @@
                 <div class="col-md-3 col-sm-6">
                     <div class="widget">
                         <h4>THÔNG TIN LIÊN HỆ</h4>
-                        <a href="#"><i class="fa fa-envelope-o"></i> Chototquynhon.com@gmail.com</a><br/>
+                        <a href="#"><i class="fa fa-envelope-o"></i> <?php echo My\General::EMAIL_SUPPORT; ?></a><br/>
                         <a rel="nofollow" href="ymsgr:sendIM?chototquynhon&amp;m=Xin chào Chototquynhon :"><image src="<?php echo STATIC_URL; ?>/f/v1/images/Yahoo-Messenger-alt-icon.png" style="width: 20px;margin-left: -3px;"/> Chototquynhon.com</a><br/>
-                        <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Chototquynhon.com</a><br/>
+                        <a rel="nofollow" href="skype:ngocchien01?chat"><i class="fa fa-skype"></i> Bestquynhon.com</a><br/>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
                     <div class="copyright text-center">
-                        <p>@ All Copyrights Reseverd 2016 - Design & Development by <a class="col" href="<?php echo $this->serverUrl(); ?>">quynhon247.com</a></p>
+                        <p>@ All Copyrights Reseverd 2016 - Design & Development by <a class="col" href="<?php echo $this->serverUrl(); ?>">bestquynhon.com</a></p>
                     </div>
                 </div>
             </div>
@@ -105,9 +105,6 @@
                 </a>
                 <a href="<?php echo GOOGLE_AUTH_URL; ?>">
                     <i class="fa fa-google-plus"></i>
-                </a>
-                <a href="javascript:;">
-                    <i class="fa fa-twitter"></i>
                 </a>
             </div>
         </div>
@@ -203,9 +200,6 @@
                 <a href="<?php echo GOOGLE_AUTH_URL; ?>">
                     <i class="fa fa-google-plus"></i>
                 </a>
-                <a href="javascript:;">
-                    <i class="fa fa-twitter"></i>
-                </a>
             </div>
         </div>
     </div>
@@ -218,7 +212,7 @@
     "contactPoint" : [
     { "@type" : "ContactPoint",
     "telephone" : "097 353 1618",
-    "contactType" : "Admin Chotoquynhon.com"
+    "contactType" : "Admin bestquynhon.com"
     } ] }
 </script>
 <script>
