--- a/module/Frontend/view/v1/layout/email-replay-messages.phtml
+++ b/module/Frontend/view/v1/layout/email-replay-messages.phtml
@@ -10,7 +10,7 @@
     <body>
         <div style="width: 635px; margin: 50px auto; position: relative; overflow: hidden;font-family: arial;">
             <div style="overflow: hidden; padding: 10px 0; margin-bottom: 50px">
-                <div style="float: left !important;"><a href="<?php echo BASE_URL; ?>" style="color: #22a0e2;"><img src="http://static.nhadat.net/images/logo.png" alt="<?php echo My\General::SITE_AUTH; ?>"></a></div>
+                <div style="float: left !important;"><a href="<?php echo BASE_URL; ?>" style="color: #22a0e2;"><img src="<?php echo STATIC_URL . '/f/v1/images/logoct.png'; ?>" alt="<?php echo My\General::SITE_AUTH; ?>"></a></div>
             </div>
             <div style="border-bottom: 1px solid #e6e6e6;">
                 <h4 style="color: #454545; font-weight: bold; font-size: 18px;">Xin chào <?php echo $this->arrUserInfo['user_fullname']; ?> !</h4>
