--- a/module/Frontend/view/v1/frontend/auth/reset-password.phtml
+++ b/module/Frontend/view/v1/frontend/auth/reset-password.phtml
@@ -1,5 +1,30 @@
-<h3>Chúng tôi nhận được yêu cầu lấy lại mật khẩu từ bạn!</h3><br/>
-Nếu đúng là yêu cầu của bạn! Xin vui lòng click vào link bên dưới để tiến hành reset mật khẩu:<br/>
-<a href="<?php echo $this->serverUrl() . $this->Url('comfirm-forgot-password', array('randomKey' => $this->random_key)); ?>">Kích vào đây </a><br/><br/>
-Nếu không phải là yêu cầu của bạn! Xin vui lòng bỏ qua!<br/><br/>
-<h2><b>Chototquynhon.com - Mạng mua bán - rao vặt Quy Nhơn - Bình Định </b></h2>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="description" content="Tin nhắn từ - <?php echo My\General::SITE_AUTH; ?>">
+        <meta name="author" content="<?php echo My\General::SITE_AUTH; ?>">
+        <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'> 
+        <title><?php echo \My\General::SITE_AUTH; ?></title>
+    </head>
+    <body>
+        <div style="width: 635px; margin: 50px auto; position: relative; overflow: hidden;font-family: arial;">
+            <div style="overflow: hidden; padding: 10px 0; margin-bottom: 50px">
+                <div style="float: left !important;"><a href="<?php echo BASE_URL; ?>" style="color: #22a0e2;"><img src="<?php echo STATIC_URL . '/f/v1/images/logoct.png'; ?>" alt="<?php echo My\General::SITE_AUTH; ?>"></a></div>
+            </div>
+            <div style="border-bottom: 1px solid #e6e6e6;">
+                <h4 style="color: #454545; font-weight: bold; font-size: 18px;">Xin chào <?php echo $name; ?> !</h4>
+                <p style="color: #454545; font-size: 18px;">
+                    Chúng tôi nhận được yêu cầu lấy lại mật khẩu từ email của bạn. Nếu đây thực sự là yêu cầu của bạn thì click vào link bên dưới :
+                </p>
+                <div style="color: #454545; font-size: 18px; margin-bottom: 30px; padding: 30px 0 20px;">
+                    <center><div style="color: #e65711; border: none; padding: 10px 0; font-size: 30px; border-radius: 4px; cursor: pointer"><a style="text-decoration:none;" href="<?php echo $this->serverUrl() . $this->Url('comfirm-forgot-password', array('randomKey' => $this->random_key)); ?>">&#xbb; Click vào đây &#xab;</a></div></center>
+                </div>
+                <p style="color: #454545; font-size: 14px; text-align:center">
+                    Vui lòng bỏ qua nếu không phải là yêu cầu từ bạn!
+                </p>
+            </div>
+            <?php echo $this->render('frontend/footer-email'); ?>
+        </div>
+    </body>
+</html>
