--- a/module/Frontend/view/v1/layout/layout.phtml
+++ b/module/Frontend/view/v1/layout/layout.phtml
@@ -52,7 +52,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
             }
         </script>
 
-        <script>
+<!--        <script>
             (function (d, s, id) {
                 var js, fjs = d.getElementsByTagName(s)[0];
                 if (d.getElementById(id))
@@ -62,12 +62,12 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 js.src = "//connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v2.6&appId=1697339473867169";
                 fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
-        </script>
-        <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+        </script>-->
+        <!--<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>-->
     </head>
 
     <body>
-        <div id='chiase'>
+<!--        <div id='chiase'>
             <div style="margin:4px;">
                 <div class="fb-like" data-layout="box_count" data-action="like" data-show-faces="true" data-share="true"></div>
                 <br />
@@ -77,7 +77,7 @@ $strTemplate = current($this->layout()->getChildren())->getTemplate();
                 </div>
             </div>
         </div>
-        <div id="fb-root"></div>
+        <div id="fb-root"></div>-->
         <div id="loading-mask" style="left: -2px; top: 0px; width: 100%; height: 100%; display: none;">
             <p id="loading_mask_loader" class="loader">
                 <img alt="Loading..." src="<?php echo STATIC_URL . '/f/v1/images/ajax-loader-tr.gif'; ?>">
